[tool.poetry]
name = "async_arkon"
version = "0.0.1"
description = "An async fork of ark_rcon (https://github.com/scottjones4k/ark_rcon)"
authors = ["DLCHAMP <36091350+dlchamp@users.noreply.github.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/dlchamp/ark_rcon"
homepage = "https://github.com/dlchamp/ark_rcon"
keywords = [
    "RCON",
    "Ark",
]
classifiers=[
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Intended Audience :: Developers",
        "Natural Language :: English",
        "Operating System :: OS Independent",
        "License :: OSI Approved :: Apache Software License",
        "Topic :: Software Development :: Libraries",
        "Topic :: Software Development :: Libraries :: Python Modules",
        "Topic :: Utilities",
        "Typing :: Typed",

]
packages = [
    {include = "async_arkon", from = "src"}
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.8"
isort = "^5.13.2"
black = "^23.12.0"
pre-commit = "^3.6.0"
pyright = "^1.1.340"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocs-markdownextradata-plugin = "^0.2.5"
mkdocs-material = "^9.5.2"
mkdocs-autorefs = "^0.5.0"
mkdocs-gen-files = "^0.5.0"
mkdocs-literate-nav = "^0.6.1"
mkdocs-minify-plugin = "^0.7.2"
mkdocstrings = {extras = ["python"], version = "^0.24.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



[tool.black]
line-length = 100
target-version = ["py39","py310","py311"]


[tool.ruff.isort]
combine-as-imports = true


[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.11"



[tool.ruff]
line-length = 100
select = [
    "E",
    "F",
    "W",
    "I",
    "D",
    "UP",
    "YTT",
    "ANN",
    "S",
    "BLE",
    "FBT",
    "B",
    "C4",
    "DTZ",
    "T10",
    "EM",
    "ISC",
    "G",
    "PIE",
    "T20",
    "Q",
    "RSE",
    "RET",
    "SIM",
    "TCH",
    "ARG",
    "PGH",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "TRY",
    "RUF",
]
ignore = [
    "D100",
    "UP006",
    "S311",
    "D102",
    "UP007",
    "D104",
    "ANN101",
    "ANN102",
    "PGH003",

]


[tool.ruff.pydocstyle]
convention = "numpy"
